[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
clap = {version = "4", features = ["derive"]}
proc-macro2 = "1.0.69"
quote = "1.0.33"
syn = "2.0.39"
toml_edit = "0.21.0"

winit = "0.28.6"
